ags (0.7.66)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed chrash while reading configuration with AgsSimpleFile
	* fixed persisting/restore of AgsSoundcard from configuration with AgsSimpleFile

ags (0.7.65)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented JACK audio output support
	* implemented configuration of multiple soundcard support
	* implemented AgsAudioSettings to configure your soundcards
	* implemented AgsConnectionEditor to assign your soundcards
	* implemented ags_jack_devout.c missing functions ags_jack_devout_list_cards() and ags_jack_devout_pcm_info()
	* implemented ags_jack_devout.c adjusting pcm channels
	* implemented ags_time_get_uptime_from_offset()
	* implemented AgsConnectionManager and AgsConnection
	* implemented AgsAudioConnection to assign ressources to channels
	* implemented ags_jack_server_connect_client() to connect at an arbitrary time
	* implemented AgsChangeSoundcard task to reset AgsAudioConnection
	* implemented AgsAddSoundcard and AgsRemoveSoundcard task
	* implemented resampling in ags-buffer, ags-copy and ags-play recalls
	* refactored configuration access and minor fixes to it
	* refactored AgsAudioPreferences to use AgsAudioSettings
	* refactored AgsAudioApplicationContext and AgsXorgApplicationContext to load multiple soundcards
	* extended AgsAudio to use AgsAudioConnection
	* extended AgsChannel to use AgsRemoteChannel
	* minor-fixes caused accessing NULL pointers

ags (0.7.64)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented OSS support ags_devout_oss_init(), ags_devout_oss_play() and ags_devout_oss_stop()
	* implemented OSS part of ags_devout_get_poll_fd() and ags_devout_get_pcm_info()
	* fixed potential dead-locks in ags_devout.c
	* fixed string format in ags_devout.c
	* replaced ALSA MIDI decoder with ags_midi_buffer_util_decode()
	* added library completion routines ags_strv_contains() and ags_strv_length()